--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <video controls src="vid/video.mp4">
         </main>
         <footer class="box">
-            Samudera, 27 Februari 2024
+            Samudera test awdoqawjkdoawjkdqwijd
         </footer>
     </div>
     <script src="js/main.js"></script>
